RESOLVED FIXED251629
[WebGPU] forceFallbackAdapter CTS test fails
https://bugs.webkit.org/show_bug.cgi?id=251629
Summary [WebGPU] forceFallbackAdapter CTS test fails
Mike Wyrzykowski
Reported 2023-02-02 13:53:54 PST
[WebGPU] forceFallbackAdapter CTS test fails
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-02 13:54:15 PST
Mike Wyrzykowski
Comment 2 2023-02-02 22:10:50 PST
EWS
Comment 3 2023-02-03 15:28:55 PST
Committed 259844@main (688149b429be): <https://commits.webkit.org/259844@main> Reviewed commits have been landed. Closing PR #9583 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.