[WebGPU] forceFallbackAdapter CTS test fails (251629) https://bugs.webkit.org/show_bug.cgi?id=251629 <radar://104976449>

Reviewed by Myles C. Maxfield.

The spec says to return nullptr from requestAdapter if the
forceFallback adapter is not supported.

Now we get 0 failures (3 skips, 6 passes), on the requestAdapter
CTS tests.

* Source/WebCore/Modules/WebGPU/GPU.cpp:
(WebCore::GPU::requestAdapter):
* Source/WebCore/PAL/pal/graphics/WebGPU/Impl/WebGPUImpl.cpp:
(PAL::WebGPU::GPUImpl::requestAdapter):
* Source/WebGPU/WebGPU/Adapter.mm:
(WebGPU::Adapter::requestDevice):
* Source/WebGPU/WebGPU/Instance.mm:
(WebGPU::Instance::requestAdapter):
(wgpuInstanceRequestAdapter):
(wgpuInstanceRequestAdapterWithBlock):

Canonical link: https://commits.webkit.org/259844@main